DupliFaces: Inconsistent handling of group member types #39136

Closed
opened 2014-03-12 16:47:37 +01:00 by Willi · 9 comments

System Information
Win 7/64, AMD HD 6850

Blender Version
2.69 r60995, 2.70 2d4de27

Short description of error
If a group instance is rendered and the group contains a mesh with DupliFaces activated, and one of the children is an instance of another group, the render result of the superordinated group instance contains not only duplicates of the subordinated group instance but also the original of that instance. - but it's not as complicated if you look at the steps described below. :)

Exact steps for others to reproduce the error

Open the attached file and look at the viewport:

  • On the left, there's a sphere belonging to Group.001
  • In the middle, there's a mesh with 4 faces. DupliFaces is activated. The mesh has two child objects: a cube and an instance of Group.001. If you render, neither the child objects themselves nor the 4 faces are rendered. Only the duplicates are rendered. That's ok and the expected behavior.
  • The mesh and it's two children belong to Group.002. On the right, there's an instance of Group.002. In it's render result, the sphere is shown in the center but not the cube. This is an inconsistency how group members are handled: If a group member is an object, it's not rendered but if it's a group instance, it is rendered. This should be handled consistently.

Test_111.blend

**System Information** Win 7/64, AMD HD 6850 **Blender Version** 2.69 r60995, 2.70 2d4de27 **Short description of error** If a group instance is rendered and the group contains a mesh with DupliFaces activated, and one of the children is an instance of another group, the render result of the superordinated group instance contains not only duplicates of the subordinated group instance but also the original of that instance. - but it's not as complicated if you look at the steps described below. :) **Exact steps for others to reproduce the error** Open the attached file and look at the viewport: - On the left, there's a sphere belonging to Group.001 - In the middle, there's a mesh with 4 faces. DupliFaces is activated. The mesh has two child objects: a cube and an instance of Group.001. If you render, neither the child objects themselves nor the 4 faces are rendered. Only the duplicates are rendered. That's ok and the expected behavior. - The mesh and it's two children belong to Group.002. On the right, there's an instance of Group.002. In it's render result, the sphere is shown in the center but not the cube. This is an inconsistency how group members are handled: If a group member is an object, it's not rendered but if it's a group instance, it is rendered. This should be handled consistently. [Test_111.blend](https://archive.blender.org/developer/F80837/Test_111.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @willi-2

Added subscriber: @willi-2
Lukas Tönne was assigned by Campbell Barton 2014-03-17 09:35:21 +01:00

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Confirmed, this worked in 2.69 too.

Confirmed, this worked in 2.69 too.

This issue was referenced by blender/blender-addons-contrib@a6e347177b

This issue was referenced by blender/blender-addons-contrib@a6e347177bb61ce3d6e5657c1dfbd6ffa7663c55

This issue was referenced by a6e347177b

This issue was referenced by a6e347177bb61ce3d6e5657c1dfbd6ffa7663c55

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit a6e347177b.

Closed by commit a6e347177b.
Author

Before mistakenly opening another task, I'd better ask if I misunderstood something: The result did not change in the newest release. This means, referring to the blend I posted, on the right side, there is still the sphere in the middle rendered but not the cube even though both are children of the object of which DupliFaces is activated. Thanks in advance for clarification. (In any case, thanks for all your quick fixes BTW!)

Before mistakenly opening another task, I'd better ask if I misunderstood something: The result did not change in the newest release. This means, referring to the blend I posted, on the right side, there is still the sphere in the middle rendered but not the cube even though both are children of the object of which DupliFaces is activated. Thanks in advance for clarification. (In any case, thanks for all your quick fixes BTW!)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39136
No description provided.