source/blender/render/intern/source/convertblender.c
@@ -5031,6 +5031,8 @@ static void database_init_objects(Render *re, unsigned int renderlay, int nolamp
 					if (!allow_render_object(re, obd, nolamps, onlyselected, actob))
 						continue;
 
+					copy_m4_m4(obd->obmat, dob->mat);
+
 					if (allow_render_dupli_instance(re, dob, obd)) {
 						ParticleSystem *psys;
 						ObjectRen *obr = NULL;
